<resources>
    <string name="app_name">TODO</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="new_user_register_here">New User? Register Here</string>
    <string name="login">Login</string>
    <string name="or">or</string>
    <string name="register">Register</string>
    <string name="already_registered_login">Already Registered? Login?</string>
    <string name="log_out">Log Out</string>
    <string name="submit">submit</string>
    <string name="task">Task</string>
    <string name="due_date">Due Date</string>
    <string name="add_task">Add Task</string>
</resources>